--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <h1>Snake Game</h1>
   <h2 id="score">Score: 0</h2>
   <canvas id="gameCanvas" width="400" height="400"></canvas>
-  <audio id="eatSound" src="eating sound.mp3"></audio>
-  <audio id="gameOverSound" src="C:\Users\eng.medhat\Downloads\snake\gameOver.wav"></audio>
+  <audio id="eatSound" src="eatingsound.mp3"></audio>
+  <audio id="gameOverSound" src="gameOver.wav"></audio>
   <script src="script.js"></script>
 </body>
 </html>
